StringTemplates final