@@ -21,12 +21,9 @@
  * questions.
  */
 
- // key: compiler.note.preview.filename
- // key: compiler.note.preview.recompile
  // key: compiler.err.unclosed.text.block
  // key: compiler.err.text.block.template.is.not.well.formed
  // key: compiler.err.premature.eof
- // options: --enable-preview -source ${jdk.version}
 
 import java.lang.*;
 
